web2/nginx.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        #image: nginx:1.7.9
        image: "localhost:5000/web2"
        ports:
        - containerPort: 80
