web2/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web2
spec:
  selector:
    app: web2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
